--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1 id="msg"></h1>
+    <script type="text/javascript">
+      document.getElementById('msg').innerHTML = "Olá Mundo";
+    </script>
   </body>
 </html>
